--- a/app/src/main/res/layout/fragment_register_business.xml
+++ b/app/src/main/res/layout/fragment_register_business.xml
@@ -10,7 +10,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:background="#1273DC"
-        android:id="@+id/layout_register"
+        android:id="@+id/layout_register_business"
         android:gravity="center"
         android:orientation="vertical"
         android:layout_height="200dp">
@@ -34,48 +34,48 @@
             android:padding="4dp"
             android:layout_gravity="center"
             android:textColor="@color/white"
-            android:text="Register"/>
+            android:text="Business Registration"/>
     </LinearLayout>
 
 
 
     <LinearLayout
-        android:id="@+id/register_fields"
+        android:id="@+id/register_fields_business"
         android:padding="32dp"
         android:layout_marginTop="32dp"
         android:layout_width="match_parent"
         android:orientation="vertical"
-        app:layout_constraintTop_toBottomOf="@id/layout_register"
+        app:layout_constraintTop_toBottomOf="@id/layout_register_business"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_height="wrap_content">
         <EditText
-            android:id="@+id/fullName_field_login"
+            android:id="@+id/businessName_field_register"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginHorizontal="42dp"
             android:layout_marginVertical="8dp"
             android:drawableRight="@drawable/ic_baseline_person_24"
-            android:hint="Enter Full name"/>
+            android:hint="Enter Business name"/>
         <EditText
-            android:id="@+id/phone_field_register"
+            android:id="@+id/phone_field_register_business"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginHorizontal="42dp"
             android:layout_marginVertical="8dp"
             android:drawableRight="@drawable/ic_baseline_phone_enabled_24"
-            android:hint="Enter phone Number"/>
+            android:hint="Enter Business phone"/>
         <EditText
-            android:id="@+id/email_field_register"
+            android:id="@+id/email_field_register_business"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginHorizontal="42dp"
             android:layout_marginVertical="8dp"
             android:drawableRight="@drawable/ic_baseline_mail_24"
-            android:hint="Enter email address"/>
+            android:hint="Enter Business email"/>
 
         <EditText
-            android:id="@+id/password_field_register"
+            android:id="@+id/password_field_register_business"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginHorizontal="42dp"
@@ -83,36 +83,40 @@
             android:drawableRight="@drawable/ic_baseline_vpn_key_24"
             android:hint="Enter password"/>
 
-        <RadioGroup
-            android:layout_width="match_parent"
-            android:orientation="horizontal"
-            android:id="@+id/userType_rg"
-            android:layout_marginHorizontal="64dp"
-            android:weightSum="3"
-            android:layout_height="wrap_content">
-            <RadioButton
-                android:id="@+id/userType_businessOwner"
-                android:layout_width="wrap_content"
-                android:text="Business owner"
-                android:layout_weight="1"
-                android:layout_height="wrap_content"/>
-            <RadioButton
-                android:id="@+id/userType_client"
-                android:layout_width="wrap_content"
-                android:text="Client"
-                android:layout_weight="2"
-                android:layout_height="wrap_content"/>
-        </RadioGroup>
-
         <Button
-            android:id="@+id/btn_signup"
+            android:id="@+id/btn_map_business"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:backgroundTint="#094F9C"
-            android:text="Register"
+            android:text="Choose location"
             android:layout_marginHorizontal="42dp"
             android:layout_marginVertical="8dp"
             android:textAllCaps="false"/>
+
+        <Button
+            android:id="@+id/btn_signup_business"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:backgroundTint="#094F9C"
+            android:text="Register as Businesas"
+            android:layout_marginHorizontal="42dp"
+            android:layout_marginVertical="8dp"
+            android:textAllCaps="false"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:orientation="horizontal"
+            android:layout_marginHorizontal="64dp"
+            android:weightSum="3"
+            android:layout_height="wrap_content">
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:backgroundTint="#094F9C"
+                android:textAllCaps="false"
+                android:id="@+id/move_to_client_registration_btn"
+                android:text="Move to Client Registration"
+                />
+        </LinearLayout>
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
