--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -76,18 +76,46 @@
             android:layout_marginHorizontal="42dp"
             android:layout_marginVertical="8dp"
             android:textAllCaps="false"/>
-        <Button
 
-            android:id="@+id/btn_to_signup"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:textColor="#1273DC"
-            android:textSize="12sp"
-            android:backgroundTint="@android:color/transparent"
-            android:text="Don't have an account ? Sign up"
-            android:layout_marginHorizontal="42dp"
-            android:layout_marginVertical="8dp"
-            android:textAllCaps="false"/>
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="#1273DC"
+                android:textSize="12sp"
+                android:backgroundTint="@android:color/transparent"
+                android:text="Don't have an account? "
+                android:padding="8dp"
+                android:textAllCaps="false"/>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:orientation="vertical"
+                android:layout_height="wrap_content">
+                <Button
+                    android:id="@+id/btn_signup_business"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:backgroundTint="#094F9C"
+                    android:textSize="12sp"
+                    android:text="Sign up as Business"
+                    android:textAllCaps="false"/>
+                <Button
+                    android:id="@+id/btn_signup_client"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:backgroundTint="#094F9C"
+                    android:text="Sign up as Client"
+                    android:textSize="12sp"
+                    android:textAllCaps="false"/>
+
+            </LinearLayout>
+        </LinearLayout>
+
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
