--- a/app/src/main/res/layout/fragment_register_business.xml
+++ b/app/src/main/res/layout/fragment_register_business.xml
@@ -94,11 +94,11 @@
             android:textAllCaps="false"/>
 
         <Button
-            android:id="@+id/btn_signup_business"
+            android:id="@+id/btn_signup_business_action"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:backgroundTint="#094F9C"
-            android:text="Register as Businesas"
+            android:text="Register Business"
             android:layout_marginHorizontal="42dp"
             android:layout_marginVertical="8dp"
             android:textAllCaps="false"/>
@@ -111,7 +111,8 @@
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:backgroundTint="#094F9C"
+                android:backgroundTint="@android:color/transparent"
+                android:textColor="#094F9C"
                 android:textAllCaps="false"
                 android:id="@+id/move_to_client_registration_btn"
                 android:text="Move to Client Registration"
