--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".activities.AuthActivity"
+    tools:context=".auth.activities.AuthActivity"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <fragment
         app:layout_constraintTop_toTopOf="parent"
