--- a/app/src/main/res/navigation/auth_nav_graph.xml
+++ b/app/src/main/res/navigation/auth_nav_graph.xml
@@ -7,7 +7,7 @@
     <fragment
         tools:layout="@layout/fragment_login"
         android:id="@+id/loginFragment"
-        android:name="com.example.wheelsapp.activities.auth.LoginFragment"
+        android:name="com.example.wheelsapp.auth.fragments.LoginFragment"
         android:label="LoginFragment" >
         <action
             android:id="@+id/action_loginFragment_to_clientRegistrationFragment"
@@ -19,11 +19,11 @@
     <fragment
         tools:layout="@layout/fragment_register_business"
         android:id="@+id/businessRegistrationFragment"
-        android:name="com.example.wheelsapp.activities.auth.BusinessRegistrationFragment"
+        android:name="com.example.wheelsapp.auth.fragments.BusinessRegistrationFragment"
         android:label="BusinessRegistrationFragment" />
     <fragment
         tools:layout="@layout/fragment_register_client"
         android:id="@+id/clientRegistrationFragment"
-        android:name="com.example.wheelsapp.activities.auth.ClientRegistrationFragment"
+        android:name="com.example.wheelsapp.auth.fragments.ClientRegistrationFragment"
         android:label="ClientRegistrationFragment" />
 </navigation>
