--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -5,17 +5,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".auth.activities.AuthActivity"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <fragment
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+
+     <fragment
+        android:id="@+id/nav_host_fragment_auth"
+        android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="9.6"
-        android:id="@+id/nav_host_fragment_auth"
-        app:defaultNavHost = "true"
-        app:navGraph = "@navigation/auth_nav_graph"
-        android:name="androidx.navigation.fragment.NavHostFragment"
-        />
+        app:defaultNavHost="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        app:navGraph="@navigation/auth_nav_graph" />
 </androidx.constraintlayout.widget.ConstraintLayout>
