--- a/app/src/main/res/layout/fragment_business_bookings.xml
+++ b/app/src/main/res/layout/fragment_business_bookings.xml
@@ -40,8 +40,8 @@
 
 
     <androidx.recyclerview.widget.RecyclerView
-    tools:listitem="@layout/business_item"
-        android:id="@+id/rvBusinessList"
+        tools:listitem="@layout/booking_item"
+        android:id="@+id/rvBookingList"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@id/layout_businessList"
