--- a/app/src/main/res/layout/fragment_business_bookings.xml
+++ b/app/src/main/res/layout/fragment_business_bookings.xml
@@ -12,10 +12,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:background="#1273DC"
-        android:id="@+id/layout_businessList"
+        android:id="@+id/layout_bookingList"
         android:gravity="center"
         android:orientation="vertical"
-        android:layout_height="200dp">
+        android:layout_height="120dp">
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -34,7 +34,7 @@
             android:padding="4dp"
             android:layout_gravity="center"
             android:textColor="@color/white"
-            android:text="Business List"/>
+            android:text="Business bookings list"/>
 
     </LinearLayout>
 
@@ -44,8 +44,9 @@
         android:id="@+id/rvBookingList"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/layout_businessList"
+        app:layout_constraintTop_toBottomOf="@id/layout_bookingList"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
