--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -62,6 +62,7 @@
             android:id="@+id/password_field_login"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:inputType="textPassword"
             android:layout_marginHorizontal="42dp"
             android:layout_marginVertical="8dp"
             android:drawableRight="@drawable/ic_baseline_vpn_key_24"
