Approval or Denial bookings, BookingRepository.java

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,16 +7,71 @@
     android:layout_height="match_parent"
     tools:context=".main.activities.MainActivity">
 
-    <fragment
+    <FrameLayout
         android:id="@+id/nav_host_fragment_main"
-        android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="9.6"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/tab_bar_main"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
+
+
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="75dp"
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:weightSum="2"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:id="@+id/tab_bar_main">
+        <LinearLayout
+            android:layout_weight="1"
+            android:layout_width="wrap_content"
+            android:id="@+id/bookings_tab"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:layout_height="wrap_content">
+
+
+            <ImageView
+                android:layout_width="28dp"
+                android:background="@android:color/transparent"
+                android:src="@drawable/ic_baseline_schedule_24"
+                android:layout_height="28dp"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:text="Bookings"
+                android:textStyle="bold"
+                android:id="@+id/bookings_tab_text"
+                android:layout_height="wrap_content"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:gravity="center"
+            android:layout_width="wrap_content"
+            android:id="@+id/history_tab"
+            android:orientation="vertical"
+            android:layout_weight="1"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:background="@android:color/transparent"
+                android:src="@drawable/ic_baseline_history_24"
+                android:layout_width="28dp"
+                android:layout_height="28dp"/>
+            <TextView
+                android:text="History"
+                android:id="@+id/history_tab_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+        </LinearLayout>
+
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
